--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ xr.VRS.DynamicFoveation=False
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=True
+r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
@@ -81,8 +81,8 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
-r.AntiAliasingMethod=0
-r.MSAACount=4
+r.AntiAliasingMethod=2
+r.MSAACount=1
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.ScreenPercentage.Default=100.000000
